--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
                 <artifactId>jakarta.validation-api</artifactId>
                 <version>2.0.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <optional>true</optional>
+            </dependency>
         </dependencies>
 
         <build>
