org, user relationship imple..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/test
 spring.datasource.username=root
-spring.datasource.password=fsd6248
+spring.datasource.password=Student2
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
